<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginRegister"
    android:background="@color/blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginregister"
        android:textSize="46sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@drawable/button_background"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:background="@drawable/button_background"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

</RelativeLayout>
