<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".registerComp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regComp"
            android:textSize="37sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="32dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/compname"
                android:textColorHint="#808080"
                android:inputType="text"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CompanyEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/compemail"
                android:textColorHint="#808080"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CompanyPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/compphone"
                android:textColorHint="#808080"
                android:inputType="phone"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CompanyAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/compadd"
                android:textColorHint="#808080"
                android:inputType="text"
                android:layout_marginBottom="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Companydesc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/compdesc"
                android:textColorHint="#808080"
                android:inputType="text"
                android:layout_marginBottom="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Companypass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass1"
                android:textColorHint="#808080"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Companypass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass2"
                android:textColorHint="#808080"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:background="#007BFF"
            android:layout_marginTop="32dp" />

    </LinearLayout>
</RelativeLayout>
</ScrollView>